1997 [AutoEncode] fixed duplicate device type entries
1996 [MKV Demuxer] added mkvextract as mkv demuxer
     [Update] added mkvextract.exe and mkvinfo.exe to the file checks
     [One-Click] if the source is a MKV file the chapters will be extracted and reapplied to the output
     [One-Click] enhanced chapter and qpf file handling
     [One-Click] if the source is a MKV file the audio files can be demuxed if using FFMS indexer
1995 [MKV Muxer] added --aac-is-sbr in any case for AAC files in order to avoid a warning message
1994 [Log] added timestamp to some log items
1993 [Winamp] removed winamp encoder
1992 [AudX] removed audx encoder
1991 [Snow] removed snow encoder
1990 [MainForm] cosmetic change

Changelog 1911 --> 1989

Main changes:
[One-Click] added the FFMSIndexer so that e.g. most AVI and MKV files are now supported.
            if the FFMSIndexer is used the audio track must be encoded and cannot be muxed only.
[VideoPlayer] starting preview size will match the screen resolution. Added also an option for 1:1 preview mode.
[FileIndexer] added demux option to the audio tracks when using FFMSIndex
              these audio tracks will be added to the main input tab if "on completion load files" is selected. Feature request #3158957
[M2TS Muxer] added Blu-ray and AVCHD device output types. Feature request #1982670
[AVI Muxer] added PC device output type which is unrestricted and corresponds to the old standard settings. 
            the new standard output type is now enhanced for standalone devices so that e.g. opendml is disabled and splitting enforced. Feature request #1951705
[Update] added update check for Nero AAC encoder

Other changes:
[Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
[Audio Encoder] if AAC is detected FFAudioSource() will be used if possible
[Audio Jobs] audio encoding job can be added without existing input file
[Audio Jobs] update elapsed time while preprocessing